# readme-rel

./: .bumper.toml  .flake8  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: lint_test.yml
readme_rel/: main.py
tests/: __init__.py  test_api.py  test_objs.py  test_render.py
tests/test_data/: archived_repo.json  empty_result.json  page_1.json  page_2.json
